save and load templates almost add documentation